[gd_scene load_steps=46 format=3 uid="uid://cp51tougr60mb"]

[ext_resource type="Script" path="res://Enemies/Boss/boss.gd" id="1_wmtr5"]
[ext_resource type="Texture2D" uid="uid://c37tx5xtccww3" path="res://Art/Enemies/StoneGolemBoss.png" id="2_dlbt2"]
[ext_resource type="PackedScene" uid="uid://b0ocfd88fjt3j" path="res://Util/Components/health_component.tscn" id="3_syoay"]
[ext_resource type="PackedScene" uid="uid://caufekfovd6qa" path="res://Util/Components/hitbox_component.tscn" id="4_lxhxy"]
[ext_resource type="Texture2D" uid="uid://bsctidciq7wln" path="res://Art/Enemies/StoneGolemBoss_Beam.png" id="5_hdqbo"]
[ext_resource type="Texture2D" uid="uid://bx1ni20s6mmwl" path="res://Art/UI/healthbar.png" id="6_eqarb"]
[ext_resource type="Texture2D" uid="uid://b34pi2ay3k8rq" path="res://Art/UI/health.png" id="7_s0ky2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6c3ef"]
size = Vector2(13.5, 13.5)

[sub_resource type="Animation" id="Animation_5f2ek"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="Animation" id="Animation_mqeof"]
resource_name = "effective"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Effective"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.75, 0.75), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0.803922, 0.266667, 1), Color(0, 0.803922, 0.266667, 1), Color(0, 0.803922, 0.266667, 0)]
}

[sub_resource type="Animation" id="Animation_h3mmj"]
resource_name = "resistant"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Resist"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.75, 0.75), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.894118, 0.803922, 0.266667, 1), Color(0.894118, 0.803922, 0.266667, 1), Color(0.894118, 0.803922, 0.266667, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hrlxe"]
_data = {
"RESET": SubResource("Animation_5f2ek"),
"effective": SubResource("Animation_mqeof"),
"resistant": SubResource("Animation_h3mmj")
}

[sub_resource type="Animation" id="Animation_5nssg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gffx4"]
resource_name = "armor_buff"
length = 1.33334
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6664),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"armor_buff"
}]
}

[sub_resource type="Animation" id="Animation_5xv76"]
resource_name = "beam_attack"
length = 2.25001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.583333, 2.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"instantiate_beam"
}, {
"args": [],
"method": &"melee_attack"
}]
}

[sub_resource type="Animation" id="Animation_dxvjt"]
resource_name = "death"
length = 1.66667
step = 0.0833333
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.33333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawnExperience"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.66667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.33333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawnLoot"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.416667, 0.5, 0.583333, 0.75, 0.833333, 1, 1.25, 1.41667, 1.58333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 81, 82, 83]
}

[sub_resource type="Animation" id="Animation_wtsq2"]
resource_name = "defense"
length = 1.25001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 1.08333, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"can_do_defense_buff"
}, {
"args": [],
"method": &"return_damage"
}, {
"args": [],
"method": &"return_damage"
}, {
"args": [],
"method": &"melee_attack"
}]
}

[sub_resource type="Animation" id="Animation_hjru5"]
resource_name = "hurt"
length = 1.16667
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.25, 0.416667, 0.583333, 0.75, 0.916667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_0wbt3"]
resource_name = "idle"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_6jeyu"]
resource_name = "melee_attack"
length = 1.08334
step = 0.0833333
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"can_do_defense_buff"
}, {
"args": [],
"method": &"damaging"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="Animation" id="Animation_qcqmf"]
resource_name = "range_attack"
length = 1.75001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.75, 1.75),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"instantiate_attacking_range"
}, {
"args": [],
"method": &"melee_attack"
}]
}

[sub_resource type="Animation" id="Animation_javoi"]
resource_name = "walk"
length = 0.833341
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.833333),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"moove"
}, {
"args": [],
"method": &"range_attack"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_esvep"]
_data = {
"RESET": SubResource("Animation_5nssg"),
"armor_buff": SubResource("Animation_gffx4"),
"beam_attack": SubResource("Animation_5xv76"),
"death": SubResource("Animation_dxvjt"),
"defense": SubResource("Animation_wtsq2"),
"hurt": SubResource("Animation_hjru5"),
"idle": SubResource("Animation_0wbt3"),
"melee_attack": SubResource("Animation_6jeyu"),
"range_attack": SubResource("Animation_qcqmf"),
"walk": SubResource("Animation_javoi")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2gro2"]
animation = &"armor_buff"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ypyap"]
animation = &"beam_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5bfwo"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o1ara"]
animation = &"defense"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vqq6d"]
animation = &"hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tkpqq"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dough"]
animation = &"melee_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ixqty"]
animation = &"range_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4qdpg"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1tox1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8ycbn"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_volsn"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8vau3"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vttwu"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o6tmy"]
priority = 2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yw80d"]
switch_mode = 2
advance_mode = 2
advance_condition = &"can_buff"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_n1ii7"]
states/Start/position = Vector2(61, 132)
states/armor_buff/node = SubResource("AnimationNodeAnimation_2gro2")
states/armor_buff/position = Vector2(270, 58)
states/beam_attack/node = SubResource("AnimationNodeAnimation_ypyap")
states/beam_attack/position = Vector2(663, 239)
states/death/node = SubResource("AnimationNodeAnimation_5bfwo")
states/death/position = Vector2(788, 100)
states/defense/node = SubResource("AnimationNodeAnimation_o1ara")
states/defense/position = Vector2(392, 178)
states/hurt/node = SubResource("AnimationNodeAnimation_vqq6d")
states/hurt/position = Vector2(490, 239)
states/idle/node = SubResource("AnimationNodeAnimation_tkpqq")
states/idle/position = Vector2(184, 132)
states/melee_attack/node = SubResource("AnimationNodeAnimation_dough")
states/melee_attack/position = Vector2(400, 100)
states/range_attack/node = SubResource("AnimationNodeAnimation_ixqty")
states/range_attack/position = Vector2(663, 173)
states/walk/node = SubResource("AnimationNodeAnimation_4qdpg")
states/walk/position = Vector2(535, 58)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_1tox1"), "death", "End", SubResource("AnimationNodeStateMachineTransition_8ycbn"), "melee_attack", "walk", SubResource("AnimationNodeStateMachineTransition_volsn"), "armor_buff", "walk", SubResource("AnimationNodeStateMachineTransition_8vau3"), "hurt", "beam_attack", SubResource("AnimationNodeStateMachineTransition_vttwu"), "defense", "armor_buff", SubResource("AnimationNodeStateMachineTransition_o6tmy"), "defense", "walk", SubResource("AnimationNodeStateMachineTransition_yw80d")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3vmx"]
size = Vector2(65, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g82af"]
size = Vector2(38, 19)

[sub_resource type="Animation" id="Animation_a6rfu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ee3eh"]
resource_name = "beam"
length = 1.66667
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.916667, 1.08333, 1.25, 1.41667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667, 0.75, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(38, 19), Vector2(38, 39), Vector2(38, 39), Vector2(260, 20), Vector2(260, 20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667, 0.75, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-86, -2.5), Vector2(-86, -3.5), Vector2(-86, -3.5), Vector2(31, -4), Vector2(31, -4)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.66667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_beam"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lmrx4"]
_data = {
"RESET": SubResource("Animation_a6rfu"),
"beam": SubResource("Animation_ee3eh")
}

[node name="StoneGolemBoss" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(2.5, 2.5)
collision_layer = 16
collision_mask = 13
motion_mode = 1
script = ExtResource("1_wmtr5")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.76662, 0.76662, 0.76662, 1)
texture_filter = 1
texture = ExtResource("2_dlbt2")
hframes = 10
vframes = 10

[node name="CollisionEnemy" type="CollisionShape2D" parent="."]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_6c3ef")

[node name="Label" type="Label" parent="."]
modulate = Color(0.894118, 0.803922, 0.266667, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 10)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="ElementalAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hrlxe")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_esvep")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_n1ii7")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/can_buff = false

[node name="HealthComponent" parent="." instance=ExtResource("3_syoay")]

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_lxhxy")]
collision_layer = 16
collision_mask = 13
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(7.5, -1)
shape = SubResource("RectangleShape2D_f3vmx")

[node name="Beam" type="Area2D" parent="."]
visible = false
position = Vector2(100.4, -14)
collision_layer = 48
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Beam"]
texture_filter = 1
position = Vector2(6.80001, -1.2)
texture = ExtResource("5_hdqbo")
vframes = 14
region_enabled = true
region_rect = Rect2(0, 85, 300, 1400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beam"]
position = Vector2(-86, -2.5)
shape = SubResource("RectangleShape2D_g82af")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Beam"]
libraries = {
"": SubResource("AnimationLibrary_lmrx4")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 152.0
offset_top = 15.0
offset_right = 184.0
offset_bottom = 23.0
scale = Vector2(10, 3)
max_value = 1100.0
value = 500.0
texture_over = ExtResource("6_eqarb")
texture_progress = ExtResource("7_s0ky2")

[connection signal="body_entered" from="HitboxComponent" to="." method="_on_hitbox_component_body_entered"]
[connection signal="body_exited" from="HitboxComponent" to="." method="_on_hitbox_component_body_exited"]
[connection signal="body_entered" from="Beam" to="." method="_on_beam_body_entered"]
